--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
@@ -50,9 +50,7 @@
     </div>
     
     <div class="side-content">
-      <!-- 1/3rd of the screen space -->
-      <h2>Target</h2>
-      <p>Track your CO2 savings goal...</p>
+      <cs-decarb-shopping-cart></cs-decarb-shopping-cart>
     </div>
   </div>
   
