--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
@@ -26,14 +26,14 @@
 .progress-bar {
   background-color: #e0e0e0;
   border-radius: 10px;
-  height: 5px;
+  height: 3px;
   overflow: hidden;
   flex-grow: 1;
   margin:  10px 0;
 }
 
 .progress {
-  background-color:darkgrey;
+  background-color:#1abc9c;
   height: 100%;
   transition: width 0.3s;
 }
@@ -68,7 +68,7 @@ p {
   position: absolute;
   z-index: 1;
   top: 50px;
-  right: -50px;
+  left: 100px;
   width: 300px;
   height: auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
