--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.css
@@ -49,6 +49,8 @@
   overflow: hidden;
   flex-grow: 1;
   margin:  10px 0;
+
+  
 }
 
 .progress {
@@ -58,7 +60,7 @@
 }
 .progress-scope{
   background-color:black;
-  height: 100%;
+  height: 5px;
   transition: width 0.3s;
 }
 p {
@@ -107,7 +109,6 @@ p {
   transition: opacity 0.3s ease, visibility 0.3s ease; /* Smooth transition */
 }
 
-/* When hovering over target, show tooltip */
 .target-info:hover .tooltip {
   opacity: 1; /* Show tooltip */
   visibility: visible; /* Make it visible */
@@ -130,21 +131,19 @@ p {
 .journey-item {
   position: relative;
   margin: 15px 0;
-  padding: 30px;
+  padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f0f0f0;
-  display: flex; /* Use flexbox to control the alignment */
+  display:flex; /* Use flexbox to control the alignment */
   justify-content: space-between;
-  gap: 10px; /* Add space between items */
-}
-.journey-info {
-  margin-bottom: 5px; /* Space between the name and savings */
+  align-items: center;
+  /*gap: 2px; /* Add space between items */
 }
 .journey-item-info {
   display: flex;
   flex-direction: column; /* Stack the name and percentage vertically */
-  margin-bottom: 5px; /* Add space between the journey-item-info and savings */
+  /*margin-bottom: 5px; /* Add space between the journey-item-info and savings */
 }
 
 /* Journey item title */
@@ -161,39 +160,39 @@ p {
 .savings-container {
   display: flex;
   justify-content: space-between; /* Ensure savings are spaced out */
-  gap: 10px; /* Space between savings elements */
+  gap: 20px; /* Space between savings elements */
 }
 .remove-btn {
   position: absolute; /* Use absolute positioning */
-  top: 10px; /* Position it 5px from the top */
+  top: -15px; /* Position it 5px from the top */
   right: 5px; /* Position it 5px from the right */
   background-color: transparent;
   border: none;
   color: darkgray;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .remove-btn:hover {
   color: black;
 }
 
-.savings-container {
-  display: flex;
-  flex-direction: column;
-}
 
 .savings {
   margin: 0;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .savings-summary p {
   margin: 0;
   padding:20px;
+  font-size: 25px;
 }
 .savings-summary h3 {
   margin: 0;
   padding:20px;
+  
 }
 
 .savings-summary {
@@ -204,6 +203,7 @@ p {
   margin-top: 20px;
   border-radius: 5px;
   display:flex;
+  gap:20px;
 }
 
 
@@ -215,4 +215,12 @@ button {
   border: none;
   border-radius: 5px;
   margin-top: 10px;
+}
+.journey-item-header{
+  color: rgba(88, 86, 86, 0.642);
+  font-size: 17px;
+  display:flex;
+  justify-content: space-evenly;
+  font-weight: bold;
+  gap:20px
 }
